src/objects/DOAApprovalRequest__c.object
<CustomObject>
    <fields>
        <fullName>AECOMApprovalStatus__c</fullName>
        <label>AECOM Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AECOMGroup__c</fullName>
        <label>AECOM Group</label>
        <picklist>
            <picklistValues>
                <fullName>Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS-BC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS-EIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCS-Americas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCS EMEA/I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCS - APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AECOMHubAdministratorApprovedBy__c</fullName>
        <label>AECOM Hub Administrator Approved By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AECOMHubAdministratorApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AECOM Hub Administrator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DOAApprovalRequestsAECOMhubAdmin</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AECOMHubAdministratorCheckApp__c</fullName>
        <label>AECOM Hub Administrator Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conditionally Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AECOMHubAdministratorTimeApp__c</fullName>
        <label>AECOM Hub Administrator Time Approved</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AECOMHubApprovalRAG__c</fullName>
        <formula>IF(ISPICKVAL( AECOMApprovalStatus__c, &quot;&quot;),null, 
IF(ISPICKVAL( AECOMApprovalStatus__c, &quot;Completed&quot;), &quot;Completed&quot; 
,&quot;Pending&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AECOM Hub Approval</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AECOMHubApprovalsRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AECOM Hub</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AECOMHubCountofApproved__c</fullName>
        <label>AECOM Hub Count of Approved</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AECOMHubCountofApprovers__c</fullName>
        <label>AECOM Hub Count of Approvers</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AECOMHubDaysinApproval__c</fullName>
        <formula>IF( ISPICKVAL(AECOMApprovalStatus__c,&quot;&quot;), null, 
IF(ISPICKVAL(AECOMApprovalStatus__c,&quot;Approved&quot;), AECOMHubTimeApproved__c - AECOMHubTimeSubmittedforApproval__c , 
Now() - AECOMHubTimeSubmittedforApproval__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AECOM Hub Days in Approval</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AECOMHubTimeApproved__c</fullName>
        <label>AECOM Hub Time Approved</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AECOMHubTimeSubmittedforApproval__c</fullName>
        <label>AECOM Hub Time Submitted for Approval</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AECOMLaborCosts__c</fullName>
        <formula>Project__r.AECOMLaborCosts__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AECOM Labor Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualStartDate__c</fullName>
        <formula>Project__r.pse__Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ApprovalConditionActions__c</fullName>
        <inlineHelpText>Captures actions associated with all of the conditions</inlineHelpText>
        <label>Approval Condition Actions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ApprovalRequestedTo__c</fullName>
        <label>Approval Requested To</label>
        <picklist>
            <picklistValues>
                <fullName>Prepare Proposal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Scope</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submit Bid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negotiate Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Contract Terms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sign Contract</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ApprovalStatus__c</fullName>
        <inlineHelpText>This field is manually determined by the ORM rep to indicate the overall status of the approval process.</inlineHelpText>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conditionally Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AreaCounselApprovedBy__c</fullName>
        <label>Area Counsel Approved By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AreaCounselApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Function: Legal
Level: Area</inlineHelpText>
        <label>Area Counsel</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>DOA Approval Requests (Area Counsel)</relationshipLabel>
        <relationshipName>DOAApprovalRequestsAreaCounsel</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AreaCounselCheckApp__c</fullName>
        <label>Area Counsel Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conditionally Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AreaCounselTimeApp__c</fullName>
        <label>Area Counsel Time Approved</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AreaManagerApprovedBy__c</fullName>
        <label>Area Manager Approved By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AreaManagerApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Function: Operations
Level: Area</description>
        <label>Area Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>DOA Approval Requests (Area Manager)</relationshipLabel>
        <relationshipName>DOAApprovalRequestsAreaManager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AreaManagerCheckApp__c</fullName>
        <label>Area Manager Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conditionally Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AreaManagerTimeApp__c</fullName>
        <label>Area Manager Time Approved</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AssigntoDoAApprovalQueue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assign to DoA Approval Queue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BillingClientPrimary__c</fullName>
        <formula>Project__r.DefaultTopTaskCustomer__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Client (Primary)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Line</label>
        <referenceTo>OrganizationString__c</referenceTo>
        <relationshipLabel>DOA Approval Requests (Business Line)</relationshipLabel>
        <relationshipName>DOAApprovalRequestsBizLine</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BusinessUnitLeaderApprovedBy__c</fullName>
        <label>Business Unit Leader Approved By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessUnitLeaderApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Function: Operations
Level: Region</inlineHelpText>
        <label>Business Unit Leader</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>DOA Approval Requests (Business Unit Leader)</relationshipLabel>
        <relationshipName>DOAApprovalRequestsBizUnitLeader</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BusinessUnitLeaderCheckApp__c</fullName>
        <label>Business Unit Lead Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conditionally Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BusinessUnitLeaderTimeApp__c</fullName>
        <label>Business Unit Leader Time Approved</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Business_Group__c</fullName>
        <description>May need to be converted to look-up. TBD</description>
        <label>Business Group</label>
        <picklist>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CEOApprovedBy__c</fullName>
        <label>CEO Approved By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CEOApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CEO</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DOAApprovalRequestsCEO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CEOCheckApp__c</fullName>
        <label>CEO Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conditionally Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CEOTimeApp__c</fullName>
        <label>CEO Time Approved</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CapitalValue__c</fullName>
        <formula>Project__r.CapitalValue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Capital Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ClientReputationPastPerformance__c</fullName>
        <inlineHelpText>Describe current or previous experience with the client or any of its subsidiaries, e.g. did they treat us fairly, payment performance, propensity to take legal action, etc.  Financial assessment to be confirmed by F&amp;A.</inlineHelpText>
        <label>Client Reputation / Past Performance</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CompliancewithStrategicDirection__c</fullName>
        <description>Provide a brief description of how the pursuit complies with the overall Business Unit’s Strategic Objectives.</description>
        <inlineHelpText>Provide a brief description of how the pursuit complies with the overall Business Unit’s Strategic Objectives.</inlineHelpText>
        <label>Compliance with Strategic Direction</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ContractType__c</fullName>
        <formula>TEXT(Project__r.ContractTypes__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ContractType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CounselContractsManagerApprovedBy__c</fullName>
        <label>Counsel Contracts Manager Approved By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CounselContractsManagerApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Function: Legal
Level: Area</inlineHelpText>
        <label>Counsel/Contracts Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>DOA Approval Requests (Counsel/Contacts Manager)</relationshipLabel>
        <relationshipName>DOAApprovalRequestsContractsManager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CounselContractsManagerCheckApp__c</fullName>
        <label>Counsel Contracts Manager Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conditionally Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CounselContractsManagerTimeApp__c</fullName>
        <label>Counsel Contracts Manager Time Approved</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DCSApprovalStatusRAG__c</fullName>
        <formula>IF(ISPICKVAL(  DCSHubApprovalStatus__c , &quot;&quot;),null, 
IF(ISPICKVAL( DCSHubApprovalStatus__c , &quot;Completed&quot;),&quot;Completed&quot; 
,&quot;Pending&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DCS Approval</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DCSHubAdministratorApprovedBy__c</fullName>
        <label>DCS Hub Administrator Approved By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DCSHubAdministratorApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DCS Hub Administrator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DOAApprovalRequestsDCSHubAdministrat</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DCSHubAdministratorCheckApp__c</fullName>
        <label>DCS Hub Administrator Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conditionally Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DCSHubAdministratorTimeApp__c</fullName>
        <label>DCS Hub Administrator Time Approved</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DCSHubApprovalStatus__c</fullName>
        <label>DCS Hub Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DCSHubApprovalsRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DCS Hub</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DCSHubCountOfApproved__c</fullName>
        <label>DCS Hub Count Of Approved</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DCSHubCountofApprovers__c</fullName>
        <label>DCS Hub Count of Approvers</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DCSHubDaysInApproval__c</fullName>
        <formula>IF( ISPICKVAL(DCSHubApprovalStatus__c,&quot;&quot;), null,
IF(ISPICKVAL(DCSHubApprovalStatus__c,&quot;Approved&quot;),  DCSHubTimeApproved__c -  DCSHubTimeSubmittedforApproval__c, 
Now() - DCSHubTimeSubmittedforApproval__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DCS Hub Days In Approval</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DCSHubTimeApproved__c</fullName>
        <label>DCS Hub Time Approved</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DCSHubTimeSubmittedforApproval__c</fullName>
        <label>DCS Hub Time Submitted for Approval</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DCSgeoRiskCommitteeApprovedBy__c</fullName>
        <label>DCS Geo Risk Committee Approved By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DCSgeoRiskCommitteeApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DCS Geography Risk Committee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DOAApprovalRequestsRiskCommittee</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DCSgeoRiskCommitteeCheckApp__c</fullName>
        <label>DCS Geo Risk Committee Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conditionally Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DCSgeoRiskCommitteeTimeApp__c</fullName>
        <label>DCS Geo Risk Committee Time Approved</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateRequired__c</fullName>
        <label>Date Required</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DoAApproverPage__c</fullName>
        <formula>&quot;https://aecom--ecosysdev--c.cs15.visual.force.com/apex/ECO_DOAApprovals?Id=&quot;&amp;Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DoA Approver Page</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enable_RCST_Button__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in apex controller to set it to true or false. This field is referred to enable RCST button.</description>
        <label>Enable RCST Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EndClientPrimary__c</fullName>
        <formula>Project__r.PrimaryEndClient__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Client (Primary)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndMarket__c</fullName>
        <label>End Market</label>
        <picklist>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EnterpriseApprovalRag__c</fullName>
        <formula>IF(ISPICKVAL( EnterpriseApprovalStatus__c, &quot;&quot;),null, 
IF(ISPICKVAL( EnterpriseApprovalStatus__c, &quot;Completed&quot;),&quot;Completed&quot;, &quot;Pending&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Enterprise Approval</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EnterpriseApprovalStatus__c</fullName>
        <label>Enterprise Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EnterpriseApprovalsRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enterprise</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EnterpriseCountofApproved__c</fullName>
        <label>Enterprise Count of Approved</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EnterpriseCountofApprovers__c</fullName>
        <label>Enterprise Count of Approvers</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EnterpriseDaysinApproval__c</fullName>
        <formula>IF( ISPICKVAL(EnterpriseApprovalStatus__c,&quot;&quot;), null,
IF(ISPICKVAL(EnterpriseApprovalStatus__c,&quot;Approved&quot;),  EnterpriseTimeApproved__c -  EnterpriseTimeSubmittedforApproval__c, 
Now() - EnterpriseTimeSubmittedforApproval__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Enterprise Days in Approval</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EnterpriseOtherApprovedBy__c</fullName>
        <label>Enterprise Other Approved By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EnterpriseOtherApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Other</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DOAApprovalRequestsEntOther</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EnterpriseOtherCheckApp__c</fullName>
        <label>Enterprise Other Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conditionally Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EnterpriseOtherTimeApp__c</fullName>
        <label>Enterprise Other Time Approved</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EnterpriseRiskCommitteeApprovedBy__c</fullName>
        <label>Enterprise Risk Committee Approved By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EnterpriseRiskCommitteeApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Enterprise Risk Committee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DOAApprovalRequestsEntRiskComm</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EnterpriseRiskCommitteeCheckApp__c</fullName>
        <label>Enterprise Risk Committee Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conditionally Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EnterpriseRiskCommitteeTimeApp__c</fullName>
        <label>Enterprise Risk Committee Time Approved</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EnterpriseTimeApproved__c</fullName>
        <label>Enterprise Time Approved</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EnterpriseTimeSubmittedforApproval__c</fullName>
        <label>Enterprise Time Submitted for Approval</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EstAECOMGrossFee__c</fullName>
        <formula>Project__r.EstimatedContractValue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Est AECOM Gross Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EstAwardDate__c</fullName>
        <formula>Project__r.EstAwardDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Est Award Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EstimatedEndDate__c</fullName>
        <formula>Project__r.EstimatedEndDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EstimatedStartDate__c</fullName>
        <formula>Project__r.EstimatedStartDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FedContractsandProcurementApprovedBy__c</fullName>
        <label>Fed Contracts &amp; Procurement Approved By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FedContractsandProcurementApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Function: Federal Contracts and Procurement
Level: All</inlineHelpText>
        <label>Fed Contacts and Procurement</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>DOA Approval Requests (Federal Contacts and Procurement)</relationshipLabel>
        <relationshipName>DOAApprovalRequestsFedConProc</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FedContractsandProcurementCheckApp__c</fullName>
        <label>Fed Contracts and Procurement Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conditionally Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FedContractsandProcurementTimeApp__c</fullName>
        <label>Fed Contracts &amp; Procurement Time Approve</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FinanceGeographyControlApprovedBy__c</fullName>
        <label>Finance Geography Controller Approved By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinanceGeographyControlApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finance Geography Controller</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DOAApprovalRequestsFinanceController</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinanceGeographyControlCheckApp__c</fullName>
        <label>Finance Geography Controller Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conditionally Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FinanceGeographyControlTimeApp__c</fullName>
        <label>Finance Geo Controller Time Approved</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GeneralCounselApprovedBy__c</fullName>
        <label>General Counsel Approved By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GeneralCounselApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>General Counsel</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DOAApprovalRequestsGeneralCounsel</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GeneralCounselCheckApp__c</fullName>
        <label>General Counsel Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conditionally Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GeneralCounselTimeApp__c</fullName>
        <label>General Counsel Time Approved</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GeoChiefOperatingOfficerApprovedBy__c</fullName>
        <label>Geo Chief Operating Officer Approved By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GeoChiefOperatingOfficerApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Function: Operations
Level: Geography</inlineHelpText>
        <label>Geography Chief Operating Officer</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>DOA Approval Requests (Geo Chief Operating Officer)</relationshipLabel>
        <relationshipName>DOAApprovalRequestsGeoCOO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GeoChiefOperatingOfficerCheckApp__c</fullName>
        <label>Geo Chief Operating Officer Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conditionally Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GeoChiefOperatingOfficerTimeApp__c</fullName>
        <label>Geo Chief Operating Officer Time Approve</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GeoCountOfApprovers__c</fullName>
        <label>Geo Count Of Approvers</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GeoCountofApproved__c</fullName>
        <label>Geo Count of Approved</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GeoOtherApprovedBy__c</fullName>
        <label>Geography Other Approved By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GeoOtherApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Geography Other</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DOAApprovalRequestsGeoOther</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GeoOtherCheckApp__c</fullName>
        <label>Geography Other Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conditionally Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>